[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.1"
bcrypt = "0.15"
chrono = "0.4"
serde_json = "1.0"
